# Trex

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ASSEMBLER_FRAMEWORK.md  CAPABILITIES.md  DEVELOPMENT.md  ILLUMINA_ASSEMBLER_BLUEPRINT.md  MODULE_MAP.md  PROFILING.md  ROADMAP.md  SPADES_ARCHITECTURE_INSPIRATION.md
docs/adr/: 0001-phase2-deferrals-and-primary-collapse.md  0002-promote-active-scope-to-phase2-illumina-endgame.md  0003-benchmark-tiers-and-ci-contract.md  0003-phase2-illumina-benchmark-tier-boundaries.md  0004-benchmark-tiers-and-ci-contract.md
fixtures/: README.md  tiny_ref.fa
fixtures/expected/ref_free_smoke/: contigs.fa  graph.gfa  unitigs.fa
fixtures/phase2_synthetic/: README.md  parent1.fa  parent2.fa  reads.fq
fixtures/phix174/: README.md  reads.fq
fuzz/: Cargo.toml  README.md
fuzz/corpus/parse_fastq/: min.fq
fuzz/fuzz_targets/: parse_fastq.rs
literature/: README.md  sources.md
literature/notes/: paper-techniques.md  review-queue.md
scripts/: README.md  benchmark_gate.sh  phase2_illumina_benchmark_gate.sh  phase2_illumina_diploid_reference_layer.sh  phase2_illumina_graph_summaries.sh  phase2_illumina_haplotype_metrics.sh  pr_smoke.sh  ref_free_smoke.sh  reference_quast.sh  reference_smoke.sh
tools/: assembler_framework.toml  benchmark_data.toml  benchmark_matrix.toml  manifest.toml  validate_benchmark_matrix.py  validate_capabilities_doc.py
trex/: Cargo.toml
trex-cli/: Cargo.toml
trex-cli/src/: main.rs
trex/src/: error.rs  evidence.rs  kmer.rs  lib.rs
trex/src/dbg/: annotate.rs  export.rs  graph.rs  mod.rs  orient.rs  simplify.rs  unitig.rs  walk.rs
trex/src/illumina/: audit.rs  checkpoint.rs  counts.rs  diploid.rs  fasta.rs  fastq.rs  fragmentation.rs  io.rs  mate.rs  mod.rs  multik.rs  output.rs  paired.rs  phase2_primary.rs  pipeline.rs  preprocess.rs  promotion.rs  read.rs  scaffold.rs  scaffold_path.rs  scaffold_projection.rs  scaffold_promotion.rs  stage.rs  trust.rs
trex/tests/: assemble_smoke.rs
xtask/: Cargo.toml
xtask/src/: bench_harness.rs  data_fetch.rs  main.rs
