[workspace]
resolver = "2"
members = ["trex", "trex-cli", "xtask"]
default-members = ["trex-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "=4.5.23", features = ["derive"] }
flate2 = "1.0"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "=0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "=1.10.0"
