[package]
name = "trex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Trex assembler CLI (Tokio I/O, sync trex core)"

[[bin]]
name = "trex"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trex = { path = "../trex" }
